The correction of the cut words and the truncate was made

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -152,7 +152,7 @@ button.slick-arrow:hover {
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    word-break: break-all;
+    word-break: break-word;
   }
 
 
